# codecollab

./: FRONTEND_SUMMARY.md
business-logic-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  TASK_1.2_COMPLETION.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
business-logic-service/alembic/: env.py
business-logic-service/app/: __init__.py  config.py  database.py  dependencies.py  main.py
business-logic-service/app/api/: __init__.py
business-logic-service/app/api/v1/: __init__.py
business-logic-service/app/middleware/: __init__.py
business-logic-service/app/models/: __init__.py  audit_log.py  chat_message.py  collaborator.py  document.py  operation.py  project.py  subscription.py  usage_metric.py  user.py
business-logic-service/app/schemas/: __init__.py
business-logic-service/app/services/: __init__.py
business-logic-service/app/utils/: __init__.py
business-logic-service/tests/: __init__.py  conftest.py
frontend/: README.md  jest.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivityBar.test.tsx  ActivityBar.tsx  CTA.tsx  ChatPanel.tsx  CodeBlock.tsx  CodeEditor.tsx  CollaborationSidebar.tsx  CommandSystemExample.tsx  ContentContainer.tsx  DashboardProjectCard.tsx  EditorTabs.tsx  FeatureSection.tsx  FeaturesGrid.tsx  FileTree.tsx  Footer.tsx  FormInput.tsx  FormTextarea.tsx  GlobalSearch.tsx  Header.tsx  Hero.tsx  IDEPreview.tsx  IconSystemExample.tsx  NotificationsDropdown.tsx  PageLayout.tsx  Pricing.tsx  PricingCard.tsx  ProjectCard.tsx  ProjectCreationModal.tsx  ProjectShareModal.tsx  ResizeHandle.tsx  Sidebar.tsx  Stats.tsx  (+8 more)
realtime-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  go.mod
(+83 files in other folders)
